--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/carlib?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=rootroot
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+
+spring.jpa.show-sql = true
