First Implementation of Spring Security in the application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,11 @@ spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+spring.security.oauth2.client.registration.github.client-id=9ba51f458e42e43c69b1
+spring.security.oauth2.client.registration.github.client-secret=8a66b582cf202d7443358a156e41361c2e615a2d
+
+spring.security.oauth2.client.registration.google.client-id=89106888191-fulp2g34b42h9km5ikpkrdn689g3tr2o.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
 
 spring.jpa.show-sql = true
