End implementation Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-xghB4Rh-M
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 
 spring.jpa.show-sql = true
+spring.thymeleaf.prefix=classpath:/templates/
