End basic IHM and link to Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.security.oauth2.client.registration.google.scope=openid,profile,email
 
 spring.jpa.show-sql = true
 spring.thymeleaf.prefix=classpath:/templates/
+
+url.oauth2.authorization.google=oauth2/authorization/google
+url.icon.google=images/icons8-google-24.png 
+
+url.oauth2.authorization.github=oauth2/authorization/github
+url.icon.github=images/icons8-github-24.png
