--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,46 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/carlib?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/paymybuddy?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=rootroot
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 spring.security.oauth2.client.registration.github.client-id=9ba51f458e42e43c69b1
 spring.security.oauth2.client.registration.github.client-secret=8a66b582cf202d7443358a156e41361c2e615a2d
+url.oauth2.authorization.github=oauth2/authorization/github
+url.icon.github=images/icons8-github-24.png
+
 
 spring.security.oauth2.client.registration.google.client-id=89106888191-fulp2g34b42h9km5ikpkrdn689g3tr2o.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
+url.oauth2.authorization.google=oauth2/authorization/google
+url.icon.google=images/icons8-google-24.png 
+
 
 spring.jpa.show-sql = true
 spring.thymeleaf.prefix=classpath:/templates/
 
-url.oauth2.authorization.google=oauth2/authorization/google
-url.icon.google=images/icons8-google-24.png 
 
-url.oauth2.authorization.github=oauth2/authorization/github
-url.icon.github=images/icons8-github-24.png
+# logging.level.root=ERROR
+# logging.level.net.safety.alert=INFO
+# logging.level.com.org.springframework.boot.autoconfigure.h2=INFO
+# logging.level.com.org.springframework.boot.web.embedded.tomcat=INFO
+
+# spring.jpa.defer-datasource-initialization=true
+# spring.datasource.url=jdbc:h2:file:./h2/safetynetalert
+# spring.datasource.username=sa
+# spring.datasource.password=
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2
+# spring.sql.init.mode=always
+
+# To avoid warnings for spring boot 3.0.0
+spring.jpa.open-in-view=false
+spring.jpa.properties.]jakarta.persistence.sharedCache.mode=UNSPECIFIED
+
+# Script generation
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=database_scripts/create.sql
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=database_scripts/drop.sql
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-source=metadata
+
