Correction Bug LoginController.getUserInfo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,10 +37,10 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.jpa.open-in-view=false
 spring.jpa.properties.]jakarta.persistence.sharedCache.mode=UNSPECIFIED
 
-# Script generation
-spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
-spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=database_scripts/create.sql
-spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=database_scripts/drop.sql
-spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
-spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-source=metadata
+# Database Script generation
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=database_scripts/create.sql
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=database_scripts/drop.sql
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-source=metadata
 
